--- a/itoneproj/itoneapp/templates/itoneapp/journal_edit.html
+++ b/itoneproj/itoneapp/templates/itoneapp/journal_edit.html
@@ -4,9 +4,18 @@
 {% block content %}
 
 <div class="container">
+  <div class="row">
+    <div class="col mt-3">
+      <a href="{% url 'itoneapp:journal_list' %}" class="opct-80"><img class="width-35" src="{% static 'itoneapp/icons/backward.svg' %}" alt=""></a>
+    </div>
+  </div>
+</div>
+
+
+<div class="container">
 
   <div class="row">
-    <div class="col mt-2">
+    <div class="col">
       <div class="d-flex justify-content-center">
         <a href="{% url 'itoneapp:home' %}">
           <img src="{% static 'itoneapp/logo/brand3.png' %}" alt="logo" class="" width="125px"/>
@@ -53,7 +62,7 @@
         <label id="label_intensity" class="font-weight-bold" for="input_intensity">{{journal_detail.intensity}}</label>
 
         <label for="input_detail"></label>
-        <textarea class="form-control mt-3" id="input_detail" rows="15" placeholder="Let it out!" name="input_detail">{{journal_detail.content}}</textarea>
+        <textarea class="form-control mt-3" id="input_detail" rows="13" placeholder="Let it out!" name="input_detail">{{journal_detail.content}}</textarea>
 
 
         <div class="d-flex justify-content-center mt-3">
