--- a/itoneproj/itoneapp/templates/itoneapp/evaluation.html
+++ b/itoneproj/itoneapp/templates/itoneapp/evaluation.html
@@ -13,7 +13,7 @@
 <div class="container">
 
   <div class="row">
-    <div class="col mt-2">
+    <div class="col mt-5">
       <div class="d-flex justify-content-center">
         <a href="{% url 'itoneapp:home' %}">
           <img src="{% static 'itoneapp/logo/brand3.png' %}" alt="logo" class="" width="125px"/>
@@ -57,7 +57,7 @@
 </div>
 
 
-<div class="container mt-5">
+<div class="container mt-3">
   <div class="row">
     <div class="col-lg-12 col-md-6 col-sm-6 d-flex justify-content-between">
 
@@ -112,11 +112,20 @@
             display:false
           },
           scales: {
-              yAxes: [{
-                  ticks: {
-                      beginAtZero: true
-                  }
-              }]
+            xAxes: [{
+              gridLines: {
+                  display:false
+              }
+          }],
+
+            yAxes: [{
+              ticks: {
+                  beginAtZero: true
+              },
+              gridLines: {
+                  display:false
+              }
+            }]
           }
       }
   });
