--- a/itoneproj/itoneapp/templates/itoneapp/profile.html
+++ b/itoneproj/itoneapp/templates/itoneapp/profile.html
@@ -58,7 +58,11 @@
       <div class="row mt-5">
         <div class="col mt-2">
           <div class="d-flex justify-content-center">
+            {% if user.profile_image %}
             <img src="{{user.profile_image.url}}" alt="" class="rounded-circle" width="200px">
+            {% else %}
+            <img src="{% static 'itoneapp/logo/imageholder.jpg' %}" alt="" class="rounded-circle" width="200px">
+            {% endif %}
           </div>
         </div>
       </div>
