--- a/itoneproj/itoneapp/templates/itoneapp/register.html
+++ b/itoneproj/itoneapp/templates/itoneapp/register.html
@@ -42,7 +42,7 @@
           <input class="btn bg-color-lightgray text-center width-300 mt-2" type="password" name="password" value="" placeholder="password" required>
         </div>
         <div class="d-flex justify-content-center">
-          <input class="btn bg-color-lightgray text-center width-300 mt-2" type="file" name="profile_image" accept="image/*" required>
+          <input class="btn bg-color-lightgray text-center width-300 mt-2" type="file" name="profile_image" accept="image/*">
         </div>
         <div class="d-flex justify-content-center">
           <button class="text-white btn bg-color-blue text-center width-300 mt-2" type="submit">register</button>
