--- a/itoneproj/itoneapp/templates/itoneapp/home.html
+++ b/itoneproj/itoneapp/templates/itoneapp/home.html
@@ -49,7 +49,7 @@
 <div class="comtainer">
 
     <div class="row mt-3">
-      <div class="col-sm-6 d-flex flex-wrap justify-content-between">
+      <div class="col-lg-12 col-md-6 col-sm-6 d-flex flex-wrap justify-content-between">
 
         <!-- loop over emotions and make a div for each -->
         {% for emotion in emotions %}
